tests/instantiating/invalid/negative_array_size/bus.fbd
type t_mask mask

main bus
	par2 [-2]t_mask
